<resources>
    <string name="app_name">My Application</string>
    <string name="textview1">t_view</string>
    <string name="textview2">t_view2</string>
    <string name="textview3">t_view3</string>
    <string name="textview4">t_view4</string>
    <string name="textview5">t_view5</string>
    <string name="textview6">t_view6</string>
    <string name="bt_name1">submit</string>
    <string name="t_view7">Course_info</string>
    <string name="todo_list">Todo List</string>
    <string name="enter_a_new_todo_item">Enter a new todo item</string>
    <string name="add">Add</string>
</resources>