<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50">

        <TextView
            android:id="@+id/courseID"
            android:text="@string/textview1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/courseName"
            android:gravity="center"
            android:text="@string/textview2"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/lecturerName"
            android:gravity="center"
            android:text="@string/textview3"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50">


        <TextView
            android:id="@+id/studentID"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/textview4"
            android:gravity="center"/>

        <TextView
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/textview5"
            android:gravity="center"/>

        <TextView

            android:id="@+id/submission_status"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textview6" />


        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/bt_name1" />
    </LinearLayout>
</LinearLayout>